# rust-aes-wasm

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: benchmark.rs
src/: aegis128l.rs  aegis128x2.rs  aegis128x4.rs  aegis256.rs  aegis256x2.rs  aegis256x4.rs  aes128cbc.rs  aes128ctr.rs  aes128gcm.rs  aes128ocb.rs  aes256cbc.rs  aes256ctr.rs  aes256gcm.rs  aes256ocb.rs  cmac_aes128.rs  lib.rs
wasm-libs/: aes.zig  build.zig  build.zig.zon
