[package]
name = "aes-wasm"
version = "0.1.16"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jedisct1/rust-aes-wasm"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "AES-GCM, AES-OCB, AEGIS, AES-CTR, CMAC-AES for WebAssembly"
keywords = ["aes-gcm", "aes-ctr", "cmac", "wasm", "webassembly"]

[dev-dependencies]
benchmark-simple = "0.1.10"
aegis = "0.9.0"
aes-gcm = "0.10.3"
cmac = "0.7.2"
ctr = "0.9.2"
cbc = "0.1.2"

[[bench]]
name = "benchmark"
harness = false
